Bug overflow navbar

--- a/css/style.css
+++ b/css/style.css
@@ -269,15 +269,16 @@ footer {
 
 	.nav-contain {
 		top: 50px;
-		left: 0;
+		right: 0;
 		position: absolute;
-		width: 100vw;
-		transform: translateX(100%); /* Navbar dipindahkan ke kanan layar */
-		transition: transform 0.5s ease;
+		width: 0vw;
+		opacity: 0;
+		transition: all 0.5s ease;
 	}
 
 	.nav-contain.nav-open {
-		transform: translateX(0); /* Navbar kembali ke posisi awal */
+		width: 100vw;
+		opacity: 1;
 	}
 
 	#nav_list {
